# Serial-port-application-for-XRange-Module

./: .gitmodules  .serial_lora.cpp.swp  CMakeLists.txt  SerialLora.cpp  SerialLora.hpp  addr.h  cpu.cpp  forwarder.cpp  forwarder.hpp  main.c  main.cpp  meson.build  serialLoRa.c  serialLoRa.h  serial_lora.c  serial_lora.cpp  serial_lora.h  serial_lora.hpp  testNodeFctFrame.cpp
app/: CMakeLists.txt  main.cpp
include/: static_addr.h
node_like_fct/: main.c  meson.build  node_like_fct.h
node_like_fct/base64/: base64.c  meson.build
node_like_fct/crypto/: meson.build
node_like_fct/mac/: LoRaMac.h  meson.build
node_like_fct/mac/region/: RegionEU868.c
node_like_fct/utilities/: meson.build  utilities.c
semtechBase64/: meson.build
src/: CMakeLists.txt  cpu.cpp  cpu.hpp  serial_lora.cpp  serial_lora.hpp
